force-app/main/default/objects/Lead/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10-20</fullName>
            </value>
            <value>
                <fullName>20-40</fullName>
            </value>
            <value>
                <fullName>40-60</fullName>
            </value>
            <value>
                <fullName>70-80</fullName>
            </value>
            <value>
                <fullName>80-1Cr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>