force-app/main/default/objects/Lead/fields/Cab__c.field-meta.xml
<CustomField>
    <fullName>Cab__c</fullName>
    <label>Cab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>