force-app/main/default/objects/Lead/fields/Cab_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cab_Amount__c</fullName>
    <label>Cab Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>