force-app/main/default/objects/Lead/fields/Duplicacy_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Duplicacy_Unique_Key__c</fullName>
    <formula>Phone &amp; &quot;|&quot; &amp; Phase__c &amp; &quot;|&quot; &amp; Plot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicacy Unique Key</label>
    <type>Text</type>
</CustomField>