force-app/main/default/objects/Lead/fields/Enquired_Project__c.field-meta.xml
<CustomField>
    <fullName>Enquired_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquired Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Leads (Enquired Project)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>