force-app/main/default/objects/Lead/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Answering</fullName>
            </value>
            <value>
                <fullName>Details Shared</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Ring No Response</fullName>
            </value>
            <value>
                <fullName>No Number</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Junk/Wrong</fullName>
            </value>
            <value>
                <fullName>Casual Enquiry</fullName>
            </value>
            <value>
                <fullName>Distance Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>