force-app/main/default/objects/Lead/fields/Intrested_Projects__c.field-meta.xml
<CustomField>
    <fullName>Intrested_Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intrested Projects</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Leads (Intrested Projects)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>