force-app/main/default/objects/Lead/fields/Last_Interacted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Interacted_Date_Time__c</fullName>
    <label>Last Interacted Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>