force-app/main/default/objects/Lead/fields/Latest_Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Lead_Date__c</fullName>
    <label>Latest Lead Date</label>
    <type>DateTime</type>
</CustomField>