force-app/main/default/objects/Lead/fields/Plot__c.field-meta.xml
<CustomField>
    <fullName>Plot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Phase__c</field>
            <operation>equals</operation>
            <valueField>Unit__c.Phase__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>