force-app/main/default/objects/Lead/fields/Schedule_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_Time__c</fullName>
    <label>Schedule Date Time</label>
    <type>DateTime</type>
</CustomField>