force-app/main/default/objects/Lead/fields/Type_Of_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Site_Visit__c</fullName>
    <label>Type Of Site Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>