force-app/main/default/objects/Lead/recordTypes/Duplicate_Lead.recordType-meta.xml
<RecordType>
    <fullName>Duplicate_Lead</fullName>
    <active>true</active>
    <businessProcess>Epitome Lead Management</businessProcess>
    <label>Duplicate Lead</label>
</RecordType>