force-app/main/default/objects/Lead/recordTypes/New_Lead.recordType-meta.xml
<RecordType>
    <fullName>New_Lead</fullName>
    <active>true</active>
    <businessProcess>Epitome Lead Management</businessProcess>
    <label>New Lead</label>
</RecordType>