force-app/main/default/objects/Lead/validationRules/Prevent_Closed_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Closed_Status_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    ISPICKVAL(Status, &quot;Closed&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot change the Status to &apos;Closed&apos;.</errorMessage>
</ValidationRule>