force-app/main/default/objects/Lead/listViews/Gupshup_WhatsApp_Lead_Assignment_Lead.listView-meta.xml
<ListView>
    <fullName>Gupshup_WhatsApp_Lead_Assignment_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Gupshup WhatsApp Lead Assignment</label>
    <queue>Gupshup_WhatsApp_Lead_Assignment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>