force-app/main/default/objects/Lead/listViews/Pre_Sales_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Pre_Sales_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Pre-Sales Queue</label>
    <queue>Pre_Sales_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>