force-app/main/default/objects/Lead/listViews/Sales_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Sales_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Queue</label>
    <queue>Sales_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>