force-app/main/default/objects/Lead/listViews/Unassigned_Pre_Sales_Queue.listView-meta.xml
<ListView>
    <fullName>Unassigned_Pre_Sales_Queue</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Unassigned Pre Sales Queue</label>
</ListView>